package com.neueda.app.enums;

public enum AccountStatus {
    ACTIVE,
    INACTIVE,
    SUSPENDED,
    PENDING,
    CLOSED
}
