package com.neueda.app.enums;

public enum OrderSide {
    BUY,
    SELL
}
