package com.neueda.app.enums;

public enum OrderStatus {
    PENDING,
    FILLED,
    CANCELLED,
    REJECTED, PARTIALLY_FILLED,
    EXPIRED
}
